Actualizacion sistema login, y pantalla principal con menu lateral (estructura inicial)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,13 +19,15 @@
             android:id="@+id/edtUsuario"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Usuario" />
+            android:hint="Usuario"
+            android:minHeight="48dp" />
 
         <EditText
             android:id="@+id/edtClave"
             android:layout_width="fill_parent"
             android:layout_height="wrap_content"
-            android:text="Contrasena" />
+            android:hint="Contrasena"
+            android:minHeight="48dp" />
 
         <Button
             android:id="@+id/btnlogin"
