--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -24,8 +24,8 @@
         tools:layout="@layout/fragment_graphical" />
 
     <fragment
-        android:id="@+id/nav_slideshow"
-        android:name="com.example.appamst5.ui.slideshow.SlideshowFragment"
-        android:label="@string/menu_slideshow"
-        tools:layout="@layout/fragment_slideshow" />
+        android:id="@+id/nav_maps"
+        android:name="com.example.appamst5.ui.maps.MapsFragment"
+        android:label="@string/menu_maps"
+        tools:layout="@layout/fragment_maps" />
 </navigation>
