Añadiendo gráfica lineal

--- a/app/src/main/res/layout/fragment_graphical.xml
+++ b/app/src/main/res/layout/fragment_graphical.xml
@@ -19,4 +19,10 @@ tools:context=".ui.graphical.GraphicalFragment">
     app:layout_constraintEnd_toEndOf="parent"
     app:layout_constraintStart_toStartOf="parent"
     app:layout_constraintTop_toTopOf="parent" />
+    <com.github.mikephil.charting.charts.LineChart
+        android:id="@+id/linegraph"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+    </com.github.mikephil.charting.charts.LineChart>
 </androidx.constraintlayout.widget.ConstraintLayout>
